Syned with PR #4678
Resolves #3510

Signed-off-by: Abdul Muneer Kolarkunnu <muneer.kolarkunnu@netapp.com>